fixed small bug in galaxies#index with displaying NA. also fixed ul element spacing bug

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -8,4 +8,3 @@
 padding-left:40px;
 }
 
-ul { margin: 100px; padding: 0; }
